--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2301,6 +2301,61 @@ section.page { padding: 1em; }
 
 @media (max-width: 768px) { #menu-divider { width: 40%; } }
 
-/* .jumbotron { background: url('http://localhost:4000/assets/bachspectrogram.png') center; } .headerimage:before { background: url('http://localhost:4000/assets/bachspectrogram.png') center; } .headerimage_people:before { background: url('http://localhost:4000/assets/bachspectrogram.png') center; } */
-
-/*# sourceMappingURL=main.css.map */
+div.logo_map {
+  position: relative;
+  margin: auto;
+}
+div.logo_map > img {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+div.logo_map > a {
+  display: block;
+  position: absolute;
+}
+div.logo_map > a:hover {
+  background-color: rgba(255, 0, 0, .0);
+}
+div.logo_map > a.sshrc {
+  top: 0%;
+  left: 20%;
+  width: 60%;
+  height: 25%;
+}
+div.logo_map > a.mcgill {
+  top: 20%;
+  left: 20%;
+  width: 34%;
+  height: 25%;
+}
+div.logo_map > a.ddmal {
+  top: 20%;
+  left: 54%;
+  width: 26%;
+  height: 25%;
+}
+div.logo_map > a.cirmmt {
+  top: 40%;
+  left: 20%;
+  width: 34%;
+  height: 25%;
+}
+div.logo_map > a.frqsc {
+  top: 40%;
+  left: 54%;
+  width: 26%;
+  height: 25%;
+}
+div.logo_map > a.computecanada {
+  top: 70%;
+  left: 20%;
+  width: 34%;
+  height: 25%;
+}
+div.logo_map > a.calculquebec {
+  top: 70%;
+  left: 54%;
+  width: 26%;
+  height: 25%;
+}
