Update computecanada class name to the new name

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2347,7 +2347,7 @@ div.logo_map > a.frqsc {
   width: 26%;
   height: 25%;
 }
-div.logo_map > a.computecanada {
+div.logo_map > a.alliancecan {
   top: 70%;
   left: 20%;
   width: 34%;
